Исправляет нижний баннер

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -75,4 +75,4 @@
 @import "components/pricing-options";
 @import "components/main";
 @import "components/delivery-options";
-@import "components/get-address";
+@import "components/section-banner";
