--- a/src/scss/components/_delivery-options.scss
+++ b/src/scss/components/_delivery-options.scss
@@ -4,6 +4,10 @@
   @include media-breakpoint-up(lg) {
     text-align: left;
   }
+
+  &--black {
+    display: none;
+  }
 }
 
 .delivery-options__wrapper {
@@ -27,7 +31,7 @@
 
   &::before {
     font-family: "Jost", "Arial", sans-serif;
-    content: "0"counter(delivery-opts)".";
+    content: "0" counter(delivery-opts) ".";
     display: block;
     position: absolute;
     left: 0;
@@ -53,6 +57,10 @@
     padding-top: 0;
     padding-left: 161px;
     margin-bottom: 100px;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
   }
 }
 
