--- a/src/templates/components/calculator.html
+++ b/src/templates/components/calculator.html
@@ -271,12 +271,13 @@
 
               <div class="tariff-info__limits">
                 <b class="tariff-info__limits-title heading-tertiary">Ограничения:</b>
-                <ul class="tariff-info__list tariff-info__list--4 tariff-info__limits-list list">
+                <ul class="tariff-info__limits-list list">
                   <li>Обязательно предварительное оформление посылки, до прихода на склад</li>
                   <li>Без объединения: не&nbsp;более одной входящей в каждой исходящей посылке</li>
                   <li>Без переупаковки или&nbsp;переупаковка по нашему усмотрению</li>
                   <li>Доставка возможна до&nbsp;ПВЗ&nbsp;(пункта выдачи заказа) и&nbsp;в&nbsp;постаматы</li>
                 </ul>
+                <p class="tariff-info__limits-text">парфюмерия, зажигалки, масла, топливо, лак для ногтей, баллоны под давлением (лак для волос, крем для бритья), батареи, огнестрельное оружие, вооружение и ихчасти: военное, полицейское и тактическое оборудование любого вида, включая оружие, точные копии оружия, принадлежности оружия, компоненты оружия, боеприпасы и т. д.</p>
               </div>
             </li>
 
