--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -55,6 +55,7 @@ $white: #ffffff;
 $white-1: #fbfbfb;
 $yellow: #ffe200;
 $blue: #1467ff;
+$blue-1: #5591FF;
 $blue-dark: #084fd1;
 $blue-light: #bbd3ff;
 $blue-light-1: #ddeaff;
