--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@
 @import "typography/heading-primary";
 @import "typography/heading-secondary";
 @import "typography/heading-tertiary";
+@import "typography/link";
 
 // Grid
 
