--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -76,3 +76,4 @@
 @import "components/pricing-options";
 @import "components/delivery-options";
 @import "components/section-banner";
+@import "components/notification";
