--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -51,14 +51,18 @@ $container-max-widths: (
 
 $black: #000000;
 $black-1: #1a223f;
+$black-2: rgba(0,0,0, 0.1);
+$black-3: rgba(0,0,0, 0.05);
 $white: #ffffff;
 $white-1: #fbfbfb;
 $yellow: #ffe200;
 $blue: #1467ff;
 $blue-1: #5591FF;
 $blue-dark: #084fd1;
+$blue-2: #2B69F6;
 $blue-light: #bbd3ff;
 $blue-light-1: #ddeaff;
+$purple: #616D99;
 $grey-dark: #282828;
 $grey-light: #bfbfbf;
 $grey-light-1: #c1c1c1;
