--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -56,6 +56,7 @@ $black-3: rgba(0,0,0, 0.05);
 $white: #ffffff;
 $white-1: #fbfbfb;
 $yellow: #ffe200;
+$yellow-1: #faE14c;
 $blue: #1467ff;
 $blue-1: #5591FF;
 $blue-dark: #084fd1;
