--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -77,3 +77,4 @@
 @import "components/delivery-options";
 @import "components/section-banner";
 @import "components/notification";
+@import "components/new-banner";
