--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,3 +78,4 @@
 @import "components/section-banner";
 @import "components/notification";
 @import "components/new-banner";
+@import "components/place-parcel";
