--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -63,10 +63,12 @@ $blue-dark: #084fd1;
 $blue-2: #2B69F6;
 $blue-light: #bbd3ff;
 $blue-light-1: #ddeaff;
+$lilac: #DFE9FD;
 $purple: #616D99;
 $grey-dark: #282828;
 $grey-light: #bfbfbf;
 $grey-light-1: #c1c1c1;
+$grey-light-2: #99A2C5;
 $grey-medium: #808080;
 $grey-medium-1: #808181;
 $grey-special: #5d5d5d;
