--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -61,6 +61,7 @@ $blue: #1467ff;
 $blue-1: #5591FF;
 $blue-dark: #084fd1;
 $blue-2: #2B69F6;
+$blue-3: #3A78BC;
 $blue-light: #bbd3ff;
 $blue-light-1: #ddeaff;
 $lilac: #DFE9FD;
