--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -79,3 +79,4 @@
 @import "components/notification";
 @import "components/new-banner";
 @import "components/place-parcel";
+@import "components/current-sales";
