--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -51,25 +51,25 @@ $container-max-widths: (
 
 $black: #000000;
 $black-1: #1a223f;
-$black-2: rgba(0,0,0, 0.1);
-$black-3: rgba(0,0,0, 0.05);
+$black-2: rgba(0, 0, 0, 0.1);
+$black-3: rgba(0, 0, 0, 0.05);
 $white: #ffffff;
 $white-1: #fbfbfb;
 $yellow: #ffe200;
-$yellow-1: #faE14c;
+$yellow-1: #fae14c;
 $blue: #1467ff;
-$blue-1: #5591FF;
+$blue-1: #5591ff;
 $blue-dark: #084fd1;
-$blue-2: #2B69F6;
-$blue-3: #3A78BC;
+$blue-2: #2b69f6;
+$blue-3: #3a78bc;
 $blue-light: #bbd3ff;
 $blue-light-1: #ddeaff;
-$lilac: #DFE9FD;
-$purple: #616D99;
+$lilac: #dfe9fd;
+$purple: #616d99;
 $grey-dark: #282828;
 $grey-light: #bfbfbf;
 $grey-light-1: #c1c1c1;
-$grey-light-2: #99A2C5;
+$grey-light-2: #99a2c5;
 $grey-medium: #808080;
 $grey-medium-1: #808181;
 $grey-special: #5d5d5d;
