--- a/src/scss/components/_current-sales.scss
+++ b/src/scss/components/_current-sales.scss
@@ -35,14 +35,14 @@
   font-weight: 600;
   text-decoration: underline;
   color: $blue-3;
-  transition: color .2s ease;
+  transition: color 0.2s ease;
 
 
   &:hover {
     color: $blue;
   }
 
-  &:hover {
+  &:active {
     color: $blue-dark;
   }
 }
