--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -76,6 +76,7 @@
 @import "components/pricing-options";
 @import "components/delivery-options";
 @import "components/section-banner";
+@import "components/my-order";
 // @import "components/notification";
 // @import "components/new-banner";
 // @import "components/place-parcel";
