--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -77,7 +77,10 @@
 @import "components/delivery-options";
 @import "components/section-banner";
 @import "components/my-order";
+@import "components/orders-wrapper";
+@import "components/order-form"
 // @import "components/notification";
 // @import "components/new-banner";
 // @import "components/place-parcel";
 // @import "components/current-sales";
+
