my-order draft2

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -62,6 +62,7 @@ $blue-1: #5591ff;
 $blue-dark: #084fd1;
 $blue-2: #2b69f6;
 $blue-3: #3a78bc;
+$blue-4: #5B72EC;
 $blue-light: #bbd3ff;
 $blue-light-1: #ddeaff;
 $lilac: #dfe9fd;
@@ -73,3 +74,6 @@ $grey-light-2: #99a2c5;
 $grey-medium: #808080;
 $grey-medium-1: #808181;
 $grey-special: #5d5d5d;
+$grey-2: #616E81;
+$grey-3: #504F56;
+$grey-4: #454E58;
