--- a/src/scss/components/_order-form.scss
+++ b/src/scss/components/_order-form.scss
@@ -1,8 +1,3 @@
-.order-form {
-  padding: 19px 23px 23px;
-
-}
-
 .order-form__label {
   display: block;
   line-height: 16px;
@@ -13,11 +8,16 @@
 .order-form__input {
   width: 100%;
   height: 45px;
-  padding: 15px 26px;
+  padding: 13px 24px;
   border-radius: 7px;
   border: 2px solid $grey-2;
   color: $grey-3;
-  line-height: 14px;
+  line-height: 15px;
+  outline: none;
+
+  &:focus {
+    border-color: $blue-4;
+  }
 }
 
 .order-form__comment {
@@ -25,19 +25,4 @@
   line-height: 19px;
   color: $grey-4;
   margin: 12px 0 0;
-}
-
-.order-form__button {
-  padding: 12px;
-  margin-right: 10px;
-  background-color: $blue-4;
-  border-radius: 5px;
-  color: $white;
-  font-weight: 400;
-}
-
-.order-form__button--save {
-  background-color: $white;
-  color: $blue-4;
-  border: 2px solid $blue-4;
 }
